--- a/main/label.ipynb
+++ b/main/label.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -35,35 +35,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>(주)CMG제약</td>\n",
+       "      <td>CMG제약</td>\n",
        "      <td>58820</td>\n",
        "      <td>11-Dec</td>\n",
        "      <td>3.53</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>(주)CMG제약</td>\n",
+       "      <td>CMG제약</td>\n",
        "      <td>58820</td>\n",
        "      <td>12-Dec</td>\n",
        "      <td>-7.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>(주)CMG제약</td>\n",
+       "      <td>CMG제약</td>\n",
        "      <td>58820</td>\n",
        "      <td>13-Dec</td>\n",
        "      <td>0.70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>(주)CMG제약</td>\n",
+       "      <td>CMG제약</td>\n",
        "      <td>58820</td>\n",
        "      <td>14-Dec</td>\n",
        "      <td>3.60</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>(주)CMG제약</td>\n",
+       "      <td>CMG제약</td>\n",
        "      <td>58820</td>\n",
        "      <td>15-Dec</td>\n",
        "      <td>-32.22</td>\n",
@@ -76,63 +76,63 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8827</th>\n",
-       "      <td>흥아해운(주)</td>\n",
+       "      <th>8787</th>\n",
+       "      <td>흥아해운</td>\n",
+       "      <td>3280</td>\n",
+       "      <td>14-Dec</td>\n",
+       "      <td>1.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8788</th>\n",
+       "      <td>흥아해운</td>\n",
        "      <td>3280</td>\n",
        "      <td>15-Dec</td>\n",
        "      <td>1.02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8828</th>\n",
-       "      <td>흥아해운(주)</td>\n",
+       "      <th>8789</th>\n",
+       "      <td>흥아해운</td>\n",
        "      <td>3280</td>\n",
        "      <td>16-Dec</td>\n",
        "      <td>0.21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8829</th>\n",
-       "      <td>흥아해운(주)</td>\n",
+       "      <th>8790</th>\n",
+       "      <td>흥아해운</td>\n",
        "      <td>3280</td>\n",
        "      <td>17-Dec</td>\n",
        "      <td>-0.42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8830</th>\n",
-       "      <td>흥아해운(주)</td>\n",
+       "      <th>8791</th>\n",
+       "      <td>흥아해운</td>\n",
        "      <td>3280</td>\n",
        "      <td>18-Dec</td>\n",
        "      <td>-1.16</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8831</th>\n",
-       "      <td>흥아해운(주)</td>\n",
-       "      <td>3280</td>\n",
-       "      <td>19-Dec</td>\n",
-       "      <td>-0.55</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>8832 rows × 4 columns</p>\n",
+       "<p>8792 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           회사명  거래소코드    회계년도  이자보상배율\n",
-       "0     (주)CMG제약  58820  11-Dec    3.53\n",
-       "1     (주)CMG제약  58820  12-Dec   -7.75\n",
-       "2     (주)CMG제약  58820  13-Dec    0.70\n",
-       "3     (주)CMG제약  58820  14-Dec    3.60\n",
-       "4     (주)CMG제약  58820  15-Dec  -32.22\n",
-       "...        ...    ...     ...     ...\n",
-       "8827   흥아해운(주)   3280  15-Dec    1.02\n",
-       "8828   흥아해운(주)   3280  16-Dec    0.21\n",
-       "8829   흥아해운(주)   3280  17-Dec   -0.42\n",
-       "8830   흥아해운(주)   3280  18-Dec   -1.16\n",
-       "8831   흥아해운(주)   3280  19-Dec   -0.55\n",
+       "        회사명  거래소코드    회계년도  이자보상배율\n",
+       "0     CMG제약  58820  11-Dec    3.53\n",
+       "1     CMG제약  58820  12-Dec   -7.75\n",
+       "2     CMG제약  58820  13-Dec    0.70\n",
+       "3     CMG제약  58820  14-Dec    3.60\n",
+       "4     CMG제약  58820  15-Dec  -32.22\n",
+       "...     ...    ...     ...     ...\n",
+       "8787   흥아해운   3280  14-Dec    1.12\n",
+       "8788   흥아해운   3280  15-Dec    1.02\n",
+       "8789   흥아해운   3280  16-Dec    0.21\n",
+       "8790   흥아해운   3280  17-Dec   -0.42\n",
+       "8791   흥아해운   3280  18-Dec   -1.16\n",
        "\n",
-       "[8832 rows x 4 columns]"
+       "[8792 rows x 4 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
     "plt.rc(\"font\", family=\"Malgun Gothic\") # 시각화 할때 한글이 볼수 있게 하겠다\n",
     "plt.rc(\"axes\", unicode_minus=False) # 마이너스 부호가 보일수 있게 하겠다\n",
     "pd.options.display.max_columns = None\n",
-    "df = pd.read_csv('../확인스v3.csv',encoding='cp949')\n",
+    "df = pd.read_csv('../반정형데이터/찐최종본inf제거.csv',encoding='cp949')\n",
     "df = df.replace(1254789.63,np.nan)\n",
     "# df['설비투자효율'] = df['설비투자효율'].astype(float)\n",
     "df = df[['회사명','거래소코드','회계년도','이자보상배율']]\n",
@@ -155,385 +155,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 전체 기록\n",
-    "f_test_x = []\n",
-    "count = 0\n",
-    "company = df.iloc[0]['회사명']\n",
+    "# # 전체 기록\n",
+    "# f_test_x = []\n",
+    "# count = 0\n",
+    "# company = df.iloc[0]['회사명']\n",
     "\n",
-    "for i in range(0, len(df)):\n",
+    "# for i in range(0, len(df)):\n",
     "\n",
-    "    # 회사명 다르면\n",
-    "    if company != df.iloc[i]['회사명']:\n",
-    "        # 회사명 기록하고\n",
-    "        company = df.iloc[i]['회사명']\n",
-    "        # 카운트 초기화하고\n",
-    "        count = 0\n",
+    "#     # 회사명 다르면\n",
+    "#     if company != df.iloc[i]['회사명']:\n",
+    "#         # 회사명 기록하고\n",
+    "#         company = df.iloc[i]['회사명']\n",
+    "#         # 카운트 초기화하고\n",
+    "#         count = 0\n",
     "\n",
-    "    #df.loc[i, 'count'] = count\n",
+    "#     #df.loc[i, 'count'] = count\n",
     "\n",
-    "    # 이자보상배율이 0이면 탈출\n",
-    "    if df.iloc[i]['이자보상배율'] == 0:\n",
-    "        df.loc[i, '부실기업'] = 0\n",
-    "        f_test_x.append(df.loc[i])\n",
-    "        count = 0\n",
-    "        continue\n",
+    "#     # 이자보상배율이 0이면 탈출\n",
+    "#     if df.iloc[i]['이자보상배율'] == 0:\n",
+    "#         df.loc[i, '부실기업'] = 0\n",
+    "#         f_test_x.append(df.loc[i])\n",
+    "#         count = 0\n",
+    "#         continue\n",
     "\n",
-    "    elif df.iloc[i]['이자보상배율'] < 1:\n",
-    "         count += 1\n",
+    "#     elif df.iloc[i]['이자보상배율'] < 1:\n",
+    "#          count += 1\n",
     "\n",
-    "    else:\n",
-    "        count = 0\n",
+    "#     else:\n",
+    "#         count = 0\n",
     "\n",
-    "    # 이자보상배율에 따라 부실기업 여부 설정\n",
-    "    if count > 1 and df.iloc[i]['이자보상배율'] >= 1:\n",
-    "        df.loc[i, '부실기업'] = 0\n",
-    "        pass\n",
+    "#     # 이자보상배율에 따라 부실기업 여부 설정\n",
+    "#     if count > 1 and df.iloc[i]['이자보상배율'] >= 1:\n",
+    "#         df.loc[i, '부실기업'] = 0\n",
+    "#         pass\n",
     "\n",
-    "    elif count > 1 and df.iloc[i]['이자보상배율'] < 1:\n",
-    "        df.loc[i, '부실기업'] = 1\n",
+    "#     elif count > 1 and df.iloc[i]['이자보상배율'] < 1:\n",
+    "#         df.loc[i, '부실기업'] = 1\n",
     "\n",
-    "    f_test_x.append(df.loc[i])"
+    "#     f_test_x.append(df.loc[i])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_test = pd.DataFrame(f_test_x)"
+    "# df_test = pd.DataFrame(f_test_x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>회사명</th>\n",
-       "      <th>거래소코드</th>\n",
-       "      <th>회계년도</th>\n",
-       "      <th>이자보상배율</th>\n",
-       "      <th>부실기업</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>(주)CMG제약</td>\n",
-       "      <td>58820</td>\n",
-       "      <td>11-Dec</td>\n",
-       "      <td>3.53</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>(주)CMG제약</td>\n",
-       "      <td>58820</td>\n",
-       "      <td>12-Dec</td>\n",
-       "      <td>-7.75</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>(주)CMG제약</td>\n",
-       "      <td>58820</td>\n",
-       "      <td>13-Dec</td>\n",
-       "      <td>0.70</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>(주)CMG제약</td>\n",
-       "      <td>58820</td>\n",
-       "      <td>14-Dec</td>\n",
-       "      <td>3.60</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>(주)CMG제약</td>\n",
-       "      <td>58820</td>\n",
-       "      <td>15-Dec</td>\n",
-       "      <td>-32.22</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8827</th>\n",
-       "      <td>흥아해운(주)</td>\n",
-       "      <td>3280</td>\n",
-       "      <td>15-Dec</td>\n",
-       "      <td>1.02</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8828</th>\n",
-       "      <td>흥아해운(주)</td>\n",
-       "      <td>3280</td>\n",
-       "      <td>16-Dec</td>\n",
-       "      <td>0.21</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8829</th>\n",
-       "      <td>흥아해운(주)</td>\n",
-       "      <td>3280</td>\n",
-       "      <td>17-Dec</td>\n",
-       "      <td>-0.42</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8830</th>\n",
-       "      <td>흥아해운(주)</td>\n",
-       "      <td>3280</td>\n",
-       "      <td>18-Dec</td>\n",
-       "      <td>-1.16</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8831</th>\n",
-       "      <td>흥아해운(주)</td>\n",
-       "      <td>3280</td>\n",
-       "      <td>19-Dec</td>\n",
-       "      <td>-0.55</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>8832 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           회사명  거래소코드    회계년도  이자보상배율  부실기업\n",
-       "0     (주)CMG제약  58820  11-Dec    3.53   NaN\n",
-       "1     (주)CMG제약  58820  12-Dec   -7.75   NaN\n",
-       "2     (주)CMG제약  58820  13-Dec    0.70   1.0\n",
-       "3     (주)CMG제약  58820  14-Dec    3.60   NaN\n",
-       "4     (주)CMG제약  58820  15-Dec  -32.22   NaN\n",
-       "...        ...    ...     ...     ...   ...\n",
-       "8827   흥아해운(주)   3280  15-Dec    1.02   NaN\n",
-       "8828   흥아해운(주)   3280  16-Dec    0.21   NaN\n",
-       "8829   흥아해운(주)   3280  17-Dec   -0.42   1.0\n",
-       "8830   흥아해운(주)   3280  18-Dec   -1.16   1.0\n",
-       "8831   흥아해운(주)   3280  19-Dec   -0.55   1.0\n",
-       "\n",
-       "[8832 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_test['부실기업'] = df_test['부실기업'].fillna(0)"
+    "# df_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>회사명</th>\n",
-       "      <th>거래소코드</th>\n",
-       "      <th>회계년도</th>\n",
-       "      <th>이자보상배율</th>\n",
-       "      <th>부실기업</th>\n",
-       "      <th>이보배2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>(주)CMG제약</td>\n",
-       "      <td>58820</td>\n",
-       "      <td>11-Dec</td>\n",
-       "      <td>3.53</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>(주)CMG제약</td>\n",
-       "      <td>58820</td>\n",
-       "      <td>12-Dec</td>\n",
-       "      <td>-7.75</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.53</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>(주)CMG제약</td>\n",
-       "      <td>58820</td>\n",
-       "      <td>13-Dec</td>\n",
-       "      <td>0.70</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-7.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>(주)CMG제약</td>\n",
-       "      <td>58820</td>\n",
-       "      <td>14-Dec</td>\n",
-       "      <td>3.60</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>(주)CMG제약</td>\n",
-       "      <td>58820</td>\n",
-       "      <td>15-Dec</td>\n",
-       "      <td>-32.22</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8827</th>\n",
-       "      <td>흥아해운(주)</td>\n",
-       "      <td>3280</td>\n",
-       "      <td>15-Dec</td>\n",
-       "      <td>1.02</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8828</th>\n",
-       "      <td>흥아해운(주)</td>\n",
-       "      <td>3280</td>\n",
-       "      <td>16-Dec</td>\n",
-       "      <td>0.21</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8829</th>\n",
-       "      <td>흥아해운(주)</td>\n",
-       "      <td>3280</td>\n",
-       "      <td>17-Dec</td>\n",
-       "      <td>-0.42</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8830</th>\n",
-       "      <td>흥아해운(주)</td>\n",
-       "      <td>3280</td>\n",
-       "      <td>18-Dec</td>\n",
-       "      <td>-1.16</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-0.42</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8831</th>\n",
-       "      <td>흥아해운(주)</td>\n",
-       "      <td>3280</td>\n",
-       "      <td>19-Dec</td>\n",
-       "      <td>-0.55</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-1.16</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>8832 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           회사명  거래소코드    회계년도  이자보상배율  부실기업  이보배2\n",
-       "0     (주)CMG제약  58820  11-Dec    3.53   0.0   NaN\n",
-       "1     (주)CMG제약  58820  12-Dec   -7.75   0.0  3.53\n",
-       "2     (주)CMG제약  58820  13-Dec    0.70   1.0 -7.75\n",
-       "3     (주)CMG제약  58820  14-Dec    3.60   0.0  0.70\n",
-       "4     (주)CMG제약  58820  15-Dec  -32.22   0.0  3.60\n",
-       "...        ...    ...     ...     ...   ...   ...\n",
-       "8827   흥아해운(주)   3280  15-Dec    1.02   0.0  1.12\n",
-       "8828   흥아해운(주)   3280  16-Dec    0.21   0.0  1.02\n",
-       "8829   흥아해운(주)   3280  17-Dec   -0.42   1.0  0.21\n",
-       "8830   흥아해운(주)   3280  18-Dec   -1.16   1.0 -0.42\n",
-       "8831   흥아해운(주)   3280  19-Dec   -0.55   1.0 -1.16\n",
-       "\n",
-       "[8832 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_test['이보배2'] = df_test['이자보상배율'].shift().where(df_test['회사명']==(df_test['회사명']).shift())\n",
-    "df_test"
+    "# df_test['부실기업'] = df_test['부실기업'].fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df_test['이보배2'] = df_test['이자보상배율'].shift().where(df_test['회사명']==(df_test['회사명']).shift())\n",
+    "# df_test"
    ]
   },
   {
@@ -542,10 +242,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(0, len(df_test)-1):\n",
-    "    if df_test.iloc[i]['회사명'] == df_test.iloc[i-1]['회사명'] and df_test.iloc[i]['회사명'] == df_test.iloc[i+1]['회사명']:\n",
-    "        if df_test.iloc[i-1]['이자보상배율'] < 1 and df_test.iloc[i]['이자보상배율'] >= 1 and df_test.iloc[i+1]['이자보상배율'] >= 1:\n",
-    "                df_test.loc[i+1, '회생여부'] = 1"
+    "no = []\n",
+    "safe = []\n",
+    "for i in range(0, len(df)-1):\n",
+    "    if df.iloc[i]['회사명'] == df.iloc[i-1]['회사명'] and df.iloc[i]['회사명'] == df.iloc[i+1]['회사명']:\n",
+    "        if df.iloc[i-1]['이자보상배율'] < 1 and df.iloc[i]['이자보상배율'] >= 1 and df.iloc[i+1]['이자보상배율'] >= 1:\n",
+    "                df.loc[i+1, '회생여부'] = 1\n",
+    "                safe.append()"
    ]
   },
   {
@@ -554,7 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_test['회생여부'] = df_test['회생여부'].fillna(0)"
+    "# df_test['회생여부'] = df_test['회생여부'].fillna(0)"
    ]
   },
   {
@@ -563,7 +266,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_test.to_csv('t+2회생여부.csv',encoding='cp949',index=False)"
+    "df.to_csv('t+2회생여부.csv',encoding='cp949',index=False)"
    ]
   },
   {
@@ -572,7 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_test[\"회생여부\"] = df_test[\"회생여부\"].shift().where(df['회사명']==(df['회사명']).shift())"
+    "# df_test[\"회생여부\"] = df_test[\"회생여부\"].shift().where(df['회사명']==(df['회사명']).shift())"
    ]
   },
   {
