--- a/main/합치기.ipynb
+++ b/main/합치기.ipynb
@@ -1327,6 +1327,582 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>회사명</th>\n",
+       "      <th>거래소코드</th>\n",
+       "      <th>회계년도</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>(주)케이이씨</td>\n",
+       "      <td>92220</td>\n",
+       "      <td>201112</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>(주)케이이씨</td>\n",
+       "      <td>92220</td>\n",
+       "      <td>201212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>(주)케이이씨</td>\n",
+       "      <td>92220</td>\n",
+       "      <td>201312</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>(주)케이이씨</td>\n",
+       "      <td>92220</td>\n",
+       "      <td>201412</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>(주)케이이씨</td>\n",
+       "      <td>92220</td>\n",
+       "      <td>201512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2446</th>\n",
+       "      <td>백광산업(주)</td>\n",
+       "      <td>1340</td>\n",
+       "      <td>201512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2447</th>\n",
+       "      <td>백광산업(주)</td>\n",
+       "      <td>1340</td>\n",
+       "      <td>201612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2448</th>\n",
+       "      <td>백광산업(주)</td>\n",
+       "      <td>1340</td>\n",
+       "      <td>201712</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2449</th>\n",
+       "      <td>백광산업(주)</td>\n",
+       "      <td>1340</td>\n",
+       "      <td>201812</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2450</th>\n",
+       "      <td>백광산업(주)</td>\n",
+       "      <td>1340</td>\n",
+       "      <td>201912</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2451 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          회사명  거래소코드    회계년도\n",
+       "0     (주)케이이씨  92220  201112\n",
+       "1     (주)케이이씨  92220  201212\n",
+       "2     (주)케이이씨  92220  201312\n",
+       "3     (주)케이이씨  92220  201412\n",
+       "4     (주)케이이씨  92220  201512\n",
+       "...       ...    ...     ...\n",
+       "2446  백광산업(주)   1340  201512\n",
+       "2447  백광산업(주)   1340  201612\n",
+       "2448  백광산업(주)   1340  201712\n",
+       "2449  백광산업(주)   1340  201812\n",
+       "2450  백광산업(주)   1340  201912\n",
+       "\n",
+       "[2451 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "o1= pd.read_csv('개발비율붙힐용.csv',encoding='utf-8')\n",
+    "o1['회계년도'] = pd.to_datetime(o1['회계년도'],format='20%d%m').dt.strftime('20%d%m')\n",
+    "o1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>회사명</th>\n",
+       "      <th>거래소코드</th>\n",
+       "      <th>회계년도</th>\n",
+       "      <th>경상개발비율</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>(주)CMG제약</td>\n",
+       "      <td>58820</td>\n",
+       "      <td>201112</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>(주)CMG제약</td>\n",
+       "      <td>58820</td>\n",
+       "      <td>201212</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>(주)CMG제약</td>\n",
+       "      <td>58820</td>\n",
+       "      <td>201312</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>(주)CMG제약</td>\n",
+       "      <td>58820</td>\n",
+       "      <td>201412</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>(주)CMG제약</td>\n",
+       "      <td>58820</td>\n",
+       "      <td>201512</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14902</th>\n",
+       "      <td>흥아해운(주)</td>\n",
+       "      <td>3280</td>\n",
+       "      <td>201512</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14903</th>\n",
+       "      <td>흥아해운(주)</td>\n",
+       "      <td>3280</td>\n",
+       "      <td>201612</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14904</th>\n",
+       "      <td>흥아해운(주)</td>\n",
+       "      <td>3280</td>\n",
+       "      <td>201712</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14905</th>\n",
+       "      <td>흥아해운(주)</td>\n",
+       "      <td>3280</td>\n",
+       "      <td>201812</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14906</th>\n",
+       "      <td>흥아해운(주)</td>\n",
+       "      <td>3280</td>\n",
+       "      <td>201912</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>14907 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            회사명  거래소코드    회계년도  경상개발비율\n",
+       "0      (주)CMG제약  58820  201112     0.0\n",
+       "1      (주)CMG제약  58820  201212     0.0\n",
+       "2      (주)CMG제약  58820  201312     0.0\n",
+       "3      (주)CMG제약  58820  201412     0.0\n",
+       "4      (주)CMG제약  58820  201512     0.0\n",
+       "...         ...    ...     ...     ...\n",
+       "14902   흥아해운(주)   3280  201512     0.0\n",
+       "14903   흥아해운(주)   3280  201612     0.0\n",
+       "14904   흥아해운(주)   3280  201712     0.0\n",
+       "14905   흥아해운(주)   3280  201812     0.0\n",
+       "14906   흥아해운(주)   3280  201912     0.0\n",
+       "\n",
+       "[14907 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "o2 = pd.read_csv('경상개발비율.csv',encoding='cp949')\n",
+    "o2['회계년도'] = pd.to_datetime(o2['회계년도'],format='%d-%b').dt.strftime('20%d%m')\n",
+    "o2 = o2.drop('Unnamed: 0',axis=1)\n",
+    "o2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2451 entries, 0 to 2450\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   회사명     2451 non-null   object\n",
+      " 1   거래소코드   2451 non-null   int64 \n",
+      " 2   회계년도    2451 non-null   object\n",
+      "dtypes: int64(1), object(2)\n",
+      "memory usage: 57.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "o1.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "회사명      0\n",
+       "거래소코드    0\n",
+       "회계년도     0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "o1.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 14907 entries, 0 to 14906\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   회사명     14907 non-null  object \n",
+      " 1   거래소코드   14907 non-null  int64  \n",
+      " 2   회계년도    14907 non-null  object \n",
+      " 3   경상개발비율  14696 non-null  float64\n",
+      "dtypes: float64(1), int64(1), object(2)\n",
+      "memory usage: 466.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "o2.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "회사명         0\n",
+       "거래소코드       0\n",
+       "회계년도        0\n",
+       "경상개발비율    211\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "o2.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "o2 = o2.fillna(1254789.63)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>회사명_x</th>\n",
+       "      <th>거래소코드</th>\n",
+       "      <th>회계년도</th>\n",
+       "      <th>회사명_y</th>\n",
+       "      <th>경상개발비율</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>(주)케이이씨</td>\n",
+       "      <td>92220</td>\n",
+       "      <td>201112</td>\n",
+       "      <td>(주)케이이씨</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>(주)케이이씨</td>\n",
+       "      <td>92220</td>\n",
+       "      <td>201212</td>\n",
+       "      <td>(주)케이이씨</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>(주)케이이씨</td>\n",
+       "      <td>92220</td>\n",
+       "      <td>201312</td>\n",
+       "      <td>(주)케이이씨</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>(주)케이이씨</td>\n",
+       "      <td>92220</td>\n",
+       "      <td>201412</td>\n",
+       "      <td>(주)케이이씨</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>(주)케이이씨</td>\n",
+       "      <td>92220</td>\n",
+       "      <td>201512</td>\n",
+       "      <td>(주)케이이씨</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2434</th>\n",
+       "      <td>백광산업(주)</td>\n",
+       "      <td>1340</td>\n",
+       "      <td>201512</td>\n",
+       "      <td>백광산업(주)</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2435</th>\n",
+       "      <td>백광산업(주)</td>\n",
+       "      <td>1340</td>\n",
+       "      <td>201612</td>\n",
+       "      <td>백광산업(주)</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2436</th>\n",
+       "      <td>백광산업(주)</td>\n",
+       "      <td>1340</td>\n",
+       "      <td>201712</td>\n",
+       "      <td>백광산업(주)</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2437</th>\n",
+       "      <td>백광산업(주)</td>\n",
+       "      <td>1340</td>\n",
+       "      <td>201812</td>\n",
+       "      <td>백광산업(주)</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2438</th>\n",
+       "      <td>백광산업(주)</td>\n",
+       "      <td>1340</td>\n",
+       "      <td>201912</td>\n",
+       "      <td>백광산업(주)</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2439 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        회사명_x  거래소코드    회계년도    회사명_y  경상개발비율\n",
+       "0     (주)케이이씨  92220  201112  (주)케이이씨     0.0\n",
+       "1     (주)케이이씨  92220  201212  (주)케이이씨     0.0\n",
+       "2     (주)케이이씨  92220  201312  (주)케이이씨     0.0\n",
+       "3     (주)케이이씨  92220  201412  (주)케이이씨     0.0\n",
+       "4     (주)케이이씨  92220  201512  (주)케이이씨     0.0\n",
+       "...       ...    ...     ...      ...     ...\n",
+       "2434  백광산업(주)   1340  201512  백광산업(주)     0.0\n",
+       "2435  백광산업(주)   1340  201612  백광산업(주)     0.0\n",
+       "2436  백광산업(주)   1340  201712  백광산업(주)     0.0\n",
+       "2437  백광산업(주)   1340  201812  백광산업(주)     0.0\n",
+       "2438  백광산업(주)   1340  201912  백광산업(주)     0.0\n",
+       "\n",
+       "[2439 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "o3 = pd.merge(o1,o2,on=['거래소코드','회계년도'],how='outer')\n",
+    "o3 = o3.dropna()\n",
+    "o3 = o3.reset_index(drop=True)\n",
+    "o3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "회사명_x     0\n",
+       "거래소코드     0\n",
+       "회계년도      0\n",
+       "회사명_y     0\n",
+       "경상개발비율    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "o3.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "o3.to_csv('비율합친거입니다.csv',encoding='cp949',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
